[tool.poetry]
name = "marksheet_evaluation_system_backend"
version = "0.1.0"
description = ""
authors = ["eric anderson <ericanderson.trer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
